--- a/_sass/layouts/_posts.scss
+++ b/_sass/layouts/_posts.scss
@@ -2,8 +2,16 @@ article,
 .comments {
   @extend %padding-regular;
   border-bottom: 1px solid $border-color;
+}
+article,
+.post {
   float: right;
   width: 70%;
+}
+article,
+.page {
+  float: left;
+  width: 100%;
 }
 article {
   header {
