Fixes broken mobile media query, fixes broken link

--- a/_sass/layouts/_posts.scss
+++ b/_sass/layouts/_posts.scss
@@ -27,7 +27,7 @@ article {
 }
 @media only screen and (max-width: 1100px) {
   article,
-  .comments {
+  .post {
     width: 100%;
     float: left;
   }
