Reduces font size slightly on code blocks

--- a/_sass/base/_global.scss
+++ b/_sass/base/_global.scss
@@ -125,6 +125,7 @@ figure.highlight {
     margin: 0;
     word-wrap: normal;
     overflow: visible;
+    font-size: 12pt;
   }
   table {
     border: 1px solid rgba(0,0,0,0.1);
